# pytorch-hydra-wandb-template

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: evaluate.py  evaluator.py  main.py  sweep.py  test_.py  tester.py  train.py  trainer.py
src/architecture/: __init__.py  cnn_2d.py  mlp.py
src/conf/: config.py  config.yaml  sweep.yaml
src/conf/data/: california_housing.yaml  diabetes.yaml  mnist.yaml
src/conf/model/: cnn_2d.yaml  mlp.yaml
src/database/: __init__.py  base_dataset.py
src/database/california_housing/: california_housing_dataset.py  load_data.ipynb
src/database/diabetes/: diabetes_dataset.py  load_data.ipynb
src/database/mnist/: load_data.ipynb  mnist_dataset.py
src/models/: README.md
src/notebook/: check_model.ipynb
src/utils/: __init__.py  dataProcessor.py  main_utils.py  training_utils.py
